--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,11 +9,68 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <div class="loading">
+    <div class="container">
+      <div style="--index: 1;"></div>
+      <div style="--index: 2;"></div>
+      <div style="--index: 3;"></div>
+      <div style="--index: 4;"></div>
+      <div style="--index: 5;"></div>
+      <div style="--index: 6;"></div>
+    </div>
+  </div>
+  <style class="pre-load">
+    .loading {
+      position: fixed;
+      top: 0px;
+      left: 0px;
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: white;
+    }
+
+    .container {
+      position: absolute;
+      width: 120px;
+      height: 120px;
+      animation: infinity-rotate 2s ease infinite;
+    }
+
+    .container>div {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transform: rotate(calc(var(--index) * 60deg));
+    }
+
+    .container>div::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 10px;
+      height: 10px;
+      border: 5px solid black;
+      border-radius: 50%;
+    }
+
+    @keyframes infinity-rotate {
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+  </style>
 </body>
 
 </html>
